Changelog v5.1.50 (2024-01-22):
- Added Paging to Animetosho

Changelog v5.1.49 (2024-01-21):
- Fixed Anilist Genres & Tags
- Fixed Smart Resolver 
- Fixed Resolving Last Source
- Fixed Info field on resolver page
- Relabeled Scrapping to Scraping

Changelog v5.1.48 (2024-01-20):
- Added Individual properties for each ID
- Added Trakt Script Support
- Added a4kSubtitles Support

Changelog v5.1.47 (2024-01-17):
- Fixed Uncached Sources for TorBox

Changelog v5.1.46 (2024-01-16):
- Recoded Uncached Sources for every debrid
- Fixed Most Issues with every debrid
- Added Cached & Uncached Fallbacks to Source Select
- Added Auto-Delete Torrents Option for each debrid
- Added 3 New Settings to Premiumize
- Added New Uncached Setting in Scraping
- Modified a couple of setting defaults

Changelog v5.1.45 (2024-01-14):
- Added Cached & Uncached Button to Source Select
- Added Resolve Uncached to TorBox
- Uncached Sources will be on by Default

Changelog v5.1.44 (2024-01-12):
- Added "Reset To Default" in Sort Select

Changelog v5.1.43 (2024-01-10):
- Fanart now utilizes Title Language
- Info is now more consistent for Embeds
- Fixed the Source Type Option

Changelog v5.1.42 (2024-01-06):
- Small Database Fix

Changelog v5.1.41 (2024-01-06):
- Added Megacloud Solver
- Added More Info for Sources
- Added Audio Channels to Sort Category
- Added Debrid Provider to Sort Category
- Added Seeders to Sort Category
- Added Subtitles to Sort Category
- Added Multi-Audio as Sort Option
- Fixed H!Anime Streams(Requires Megacloud)
- Fixed Aniwave Streams from Hanging
- Fixed Small Subtitle Bug
- Remove Animix Temporarily  
- Relabeled Type to Source Type

Changelog v5.1.40 (2024-12-27):
- Readded Skip times from Aniwave

Changelog v5.1.39 (2024-12-25):
- Added More Subtitle Settings
- Added building playlist
- Added New Icons for Search
- Added Resume Indicators
- Recoded Subtitle and Audio Stuff
- Fixed Context menu playing items
- Fixed Exodus Theme Favorites Icons
- Fixed Resume Time