@@ -1,3 +1,10 @@
+Changelog v5.1.51 (2024-01-25):
+- Requests are a lot faster now
+- Removed Request Module
+- Removed Six Module
+- Fix bugs with some logins
+- Fixed Clear Search History Button
+
 Changelog v5.1.50 (2024-01-22):
 - Added Paging to Animetosho
 
